@@ -17,6 +17,7 @@ Version 1.6 (2.0 Alpha 6)
 -fixed floor sign autosizing issues
 -many elevator queue fixes
 -fixed call cancel button
+-app now properly exits to the main menu if a building fails to load
 
 Version 1.5 (2.0 Alpha 5)
 -------------------------
